--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,31 @@
     padding:0;
     margin:0;
 }
+.blue{
+    background-color: #0084fd;
+}
+.light-blue{
+    background-color: #b5ddff;
+}
+.purple{
+    background-color: #9792e4;
+}
+.cta{
+    padding:1rem 3rem 1rem 3rem;
+}
+.flex-container{
+    display: flex;
+}
+/*********************** navbar ************************/
+nav.flex-container{
+    width:100%;
+    justify-content: space-between;
+    background-color:#0084fd;
+    color:white;    
+}
+.nav-items-desktop{
+    display:none;
+}
+.nav-items{
+    padding:1rem;
+}
