--- a/css/style.css
+++ b/css/style.css
@@ -231,3 +231,13 @@ h3{
 .txt-center{
     text-align: center;
 }
+@media screen and (min-width:769px){
+    .get-started .container,.terms .container{
+        width:30%;
+    }
+}
+/**************** footer ************/
+.terms{
+    background-color: rgb(51, 51, 51);
+    color:white;
+}
