--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,6 @@
     border-radius:1rem;
     color: black;
 }
-.cta-next{
-    display: inline-block;
-    line-height: 2rem;
-    text-align:center;
-    height:2rem;
-    width:2rem;
-    border-radius:50%;
-}
 .flex-container{
     display: flex;
 }
@@ -203,11 +195,21 @@ h1{
 [alt="planning"]{
     width:100%;
 }
+.cta-next{
+    font-size: 1.5rem;
+    display: inline-block;
+    line-height: 4rem;
+    text-align:center;
+    height:4rem;
+    width:4rem;
+    border-radius:50%;
+}
 @media screen and (min-width:769px){
     .planning>.flex-container{
         flex-direction:row;
         gap:2rem;
         width:50%;
+        align-items: flex-end;
     }
 }   
 /*********************** expert ********************/
